// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftNav > renders correctly 1`] = `
<div
  class="v-row v-row--density-default justify-end flex-nowrap flex-shrink-1 flex-grow-0 disabled"
>
  
  
  <button
    aria-describedby="v-tooltip-v-0"
    class="v-btn v-btn--icon v-theme--light text-white v-btn--density-default v-btn--size-default v-btn--variant-text"
    id="prev-shift-btn"
    style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
    type="button"
  >
    
    <span
      class="v-btn__overlay"
    />
    <span
      class="v-btn__underlay"
    />
    
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-white evocon-button-icon"
        style="font-size: 24px; height: 24px; width: 24px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          />
        </svg>
      </i>
      <!--v-if-->
      
      
    </span>
    <!---->
    <!---->
  </button>
  
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  <button
    aria-describedby="v-tooltip-v-2"
    class="v-btn v-btn--disabled v-btn--icon v-theme--light text-white v-btn--density-default v-btn--size-default v-btn--variant-text"
    disabled=""
    id="next-shift-btn"
    style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
    type="button"
  >
    
    <span
      class="v-btn__overlay"
    />
    <span
      class="v-btn__underlay"
    />
    
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text--secondary-text evocon-button-icon"
        style="font-size: 24px; height: 24px; width: 24px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
          />
        </svg>
      </i>
      <!--v-if-->
      
      
    </span>
    <!---->
    <!---->
  </button>
  
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  <button
    aria-describedby="v-tooltip-v-4"
    class="v-btn v-btn--disabled v-btn--icon v-theme--light text-white v-btn--density-default v-btn--size-default v-btn--variant-text"
    disabled=""
    id="current-shift-btn"
    style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
    type="button"
  >
    
    <span
      class="v-btn__overlay"
    />
    <span
      class="v-btn__underlay"
    />
    
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text--secondary-text evocon-button-icon"
        style="font-size: 24px; height: 24px; width: 24px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.59,7.41L10.18,12L5.59,16.59L7,18L13,12L7,6L5.59,7.41M16,6H18V18H16V6Z"
          />
        </svg>
      </i>
      <!--v-if-->
      
      
    </span>
    <!---->
    <!---->
  </button>
  
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;

exports[`ShiftNav > renders correctly when large is true 1`] = `
<div
  class="v-row v-row--density-default justify-end flex-nowrap flex-shrink-1 flex-grow-0 disabled"
>
  
  
  <button
    aria-describedby="v-tooltip-v-0"
    class="v-btn v-btn--icon v-theme--light text-white v-btn--density-default v-btn--size-large v-btn--variant-text"
    id="prev-shift-btn"
    style="height: 48px; max-height: 48px; max-width: 48px; min-height: 48px; min-width: 48px; width: 48px;"
    type="button"
  >
    
    <span
      class="v-btn__overlay"
    />
    <span
      class="v-btn__underlay"
    />
    
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-white evocon-button-icon"
        style="font-size: 24px; height: 24px; width: 24px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          />
        </svg>
      </i>
      <!--v-if-->
      
      
    </span>
    <!---->
    <!---->
  </button>
  
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  <button
    aria-describedby="v-tooltip-v-2"
    class="v-btn v-btn--disabled v-btn--icon v-theme--light text-white v-btn--density-default v-btn--size-large v-btn--variant-text"
    disabled=""
    id="next-shift-btn"
    style="height: 48px; max-height: 48px; max-width: 48px; min-height: 48px; min-width: 48px; width: 48px;"
    type="button"
  >
    
    <span
      class="v-btn__overlay"
    />
    <span
      class="v-btn__underlay"
    />
    
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text--secondary-text evocon-button-icon"
        style="font-size: 24px; height: 24px; width: 24px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
          />
        </svg>
      </i>
      <!--v-if-->
      
      
    </span>
    <!---->
    <!---->
  </button>
  
  <!--teleport start-->
  <!--teleport end-->
  
  
  
  <button
    aria-describedby="v-tooltip-v-4"
    class="v-btn v-btn--disabled v-btn--icon v-theme--light text-white v-btn--density-default v-btn--size-large v-btn--variant-text"
    disabled=""
    id="current-shift-btn"
    style="height: 48px; max-height: 48px; max-width: 48px; min-height: 48px; min-width: 48px; width: 48px;"
    type="button"
  >
    
    <span
      class="v-btn__overlay"
    />
    <span
      class="v-btn__underlay"
    />
    
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text--secondary-text evocon-button-icon"
        style="font-size: 24px; height: 24px; width: 24px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.59,7.41L10.18,12L5.59,16.59L7,18L13,12L7,6L5.59,7.41M16,6H18V18H16V6Z"
          />
        </svg>
      </i>
      <!--v-if-->
      
      
    </span>
    <!---->
    <!---->
  </button>
  
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;
